# databricks-tld-udf

./: MANIFEST.in  README.md  pyproject.toml  setup.py  udf_tld_extract.sql
tld_data/: __init__.py
