[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tld_data"
version = "1.0.0"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
tld_data = ["data/public_suffix_list.dat"]
